# reflex

./: .gitignore  CLAUDE.md  DEMO_SCRIPT.md  README.md  chat_cli.py  demo.py  generate_pitch_deck.py  pyproject.toml  skills-lock.json  streamlit_chat.py  streamlit_demo.py
.claude/: settings.local.json
backend/app/: incidents.py  main.py
backend/app/adapters/: slack.py
backend/app/agents/: graph.py  models.py  risk.py  scoring.py  state.py
backend/app/api/: chat.py  topology.py  webhook.py
backend/app/chat/: engine.py  logging.py  mock_chat_llm.py  response.py  tools.py
backend/app/providers/: base.py  factory.py  llm.py
backend/app/topology/: discovery.py  discovery_docs.py  discovery_jira.py  discovery_k8s.py  docs.py  graph.py  impact.py  merge.py
mock/: config.py  healthcare_config.py
mock/data/: jira_tickets.json
mock/data/confluence_pages/: ARCH-001-shopfast-architecture.md  (+7 more)
mock/generators/: base.py  logs.py  metrics.py  traces.py
mock/providers/: actions.py  alerts.py  context.py  knowledge.py  logs.py  metrics.py  mock_llm.py
mock/scenarios/: base.py  billing_timeout_cascade.py  db_pool_exhaustion.py  ehr_db_pool_exhaustion.py  medication_slow_query.py  memory_leak.py  payment_timeout_cascade.py  pharmacy_memory_leak.py  redis_connection_storm.py  scheduling_redis_storm.py  slow_query_cascade.py
plans/: chatops.md  increment2-pgvector.md
tests/: test_chat.py  test_healthcare.py  test_llm_provider.py  test_phases_5_to_8.py  test_tools_and_persistence.py  test_topology.py  test_topology_enriched.py  test_webhook.py
(+87 files in other folders)
